# obsidian_rust

./: .gitignore  Cargo.toml  README.md  db.sql
src/: error.rs  lib.rs  main.rs  middleware.rs  routes.rs
src/handlers/: aliases.rs  base_sets.rs  books.rs  lendings.rs  mod.rs  schools.rs  sessions.rs  students.rs  teachers.rs
src/models/: aliases.rs  base_sets.rs  books.rs  lendings.rs  mod.rs  schools.rs  sessions.rs  students.rs  teachers.rs
