[package]
name = "obsidian_rust"
version = "0.1.0"
authors = ["Philip Schlösser <philipschloesser98@gmail.com>"]

[dependencies]
rustc-serialize = "0.3"
postgres = {version = "0.13", features = ["with-chrono"]}
iron = "0.4"
router = "0.4"
r2d2 = "0.7"
r2d2_postgres = "0.11"
chrono = {version = "0.2", features = ["rustc-serialize"]}
rand = "0.3"
bcrypt = "0.1"

#[dependencies.iron]
#version = "0.4"
#features = ["ssl"]
